# MLOpsLabsSBT

./: .gitignore
.dvc/: config
Lab01/: Dockerfile  LinAlg.cpp  Makefile  README.md  perf.py  pyproject.toml  setup.py
Lab01/cosindistance/: __init__.py
Lab01/cosindistance/python/: bindings.cpp
Lab01/cosindistance/src/: CosinDistance.cpp  CosinDistance.hpp
Lab01/cosindistance/tests/: testCosinDistance.cpp
Lab01/python/: bindings.cpp  main.py
Lab01/src/: LinAlg.hpp
Lab02/: README.md  checkpoints.dvc  data.py  inference.py  model.py  requirements.txt  train.py
Lab02/conf/artefacts/: default.yaml
Lab02/conf/model/: default.yaml
Lab02/conf/optimizer/: default.yaml
Lab02/conf/training/: default.yaml
Lab02/outputs/2024-11-22/21-38-33/checkpoints/: .gitignore  epoch=2-step=402.ckpt.dvc  epoch=4-step=670.ckpt.dvc
Lab03/: README.md  clean.sh  client.py  convert_model_to_onnx.py  data.py  inference_onnx.py  onnx2tensorrt.sh  requirements.txt  train.py
Lab03/conf/: config.yaml
Lab03/conf/artefacts/: default.yaml
Lab03/conf/model/: default.yaml
Lab03/conf/training/: default.yaml
Lab03/model_repository/ensemble/: config.pbtxt
Lab03/model_repository/onnx-bert-uncased/: config.pbtxt
Lab03/model_repository/tokenizer/: config.pbtxt
Lab03/model_repository/tokenizer/1/: model.py
Lab03/model_repository/trt-bert-uncased/: config.pbtxt
Lab04/: install_git_and_lfs.sh  install_tensorrt_llm.sh  trenduol_llm_tensorrt_engine_build_and_test.sh
